--- a/src/components/category-item/category-item.styles.scss
+++ b/src/components/category-item/category-item.styles.scss
@@ -34,7 +34,8 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 1.2rem;
+      gap: 0.6rem;
+      text-transform: uppercase;
     }
 
     &-body h2 {
