--- a/src/categories.style.scss
+++ b/src/categories.style.scss
@@ -7,3 +7,30 @@
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(2, 1fr);
 }
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.primary__heading {
+  font-weight: 300;
+  letter-spacing: -0.5px;
+  font-size: 3.2rem;
+}
+.secondary__heading {
+  font-weight: 300;
+  font-size: 2rem;
+  letter-spacing: -0.5px;
+}
+
+.margin__bottom--lg {
+  margin-bottom: 4.8rem !important;
+}
+
+.margin__bottom--sm {
+  margin-bottom: 2.4rem !important;
+}
+
+.margin__bottom--md {
+  margin-bottom: 3.2rem !important;
+}
